# fabricaHistologia_backend

./: Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
core/fabrica_histologia/: apps.py  models.py  serializers.py  signals.py  views.py
core/fabrica_histologia/migrations/: 0001_initial.py  0002_initial.py  0002_organ_system_image_system_slidemicroscopypost_points_and_more.py  0003_species_alter_slidemicroscopypost_species.py
core/quiz/: apps.py  models.py  serializers.py  views.py
core/quiz/migrations/: 0001_initial.py  0002_answer_comment_answer.py
core/supporting_materials/: serializers.py  views.py
core/supporting_materials/migrations/: 0001_initial.py
core/uploader/: router.py  views.py
core/uploader/migrations/: 0001_initial.py
core/usuario/: admin.py  apps.py  managers.py  models.py  signals.py  views.py
core/usuario/migrations/: 0001_initial.py  0002_personaldata.py  0002_usuario_is_verified_usuario_verification_token.py  0003_personaldata_university.py
core/usuario/tasks/: contributor_send_email_verification.py
core/usuario/use_case/: contributor_send_email_verification.py  send_email_verification.py  slide_microscopy_send_email_validation.py
django_project/: celery.py  settings.py  urls.py
src/: db.sqlite
src/core/fabrica_histologia/: admin.py  models.py  signals.py  views.py
src/core/fabrica_histologia/migrations/: 0001_initial.py  0003_slidemicroscopypost_is_verified_and_more.py
src/core/fabrica_histologia/tasks/: slide_microscopy_send_email_validation.py
src/core/posts/: admin.py  apps.py  filters.py  models.py  router.py  serializers.py  signals.py  views.py
src/core/posts/migrations/: 0001_initial.py  0002_initial.py  0003_remove_point_analyzed_functions_and_more.py  0003_rename_slidemicroscopypost_posts_and_more.py  0004_alter_point_description.py  0004_posts_type_post.py  0005_alter_point_description.py  0006_point_analyzed_functions_point_analyzed_structures_and_more.py  0007_alter_point_color.py  0008_alter_point_description.py  0009_alter_point_posts.py
src/core/quiz/: admin.py  filters.py  models.py  router.py  serializers.py  views.py
src/core/quiz/migrations/: 0001_initial.py  0002_initial.py  0002_quiz_title.py  0002_score_total_questions.py  0003_alter_quiz_level.py  0003_alter_quiz_title.py  (+4 more)
src/core/supporting_materials/: admin.py  apps.py  filters.py  models.py  router.py  serializers.py  views.py
src/core/uploader/: admin.py  apps.py  views.py
src/core/user/: admin.py  apps.py  authentication.py  filters.py  managers.py  models.py  router.py  serializers.py  signals.py  views.py
src/core/usuario/: admin.py  models.py  serializers.py  signals.py
src/core/veterinary/: admin.py  apps.py  filters.py  models.py  router.py  serializers.py  views.py
src/django_project/: __init__.py  celery.py  pagination.py  permissions.py  router.py  settings.py  teste.py  urls.py
src/tasks/: contributor_send_email_verification.py  post_validation.py
src/templates/: contribuitor_email_template.html
(+31 files in other folders)
