[project]
name = "fabricaHistologia_backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "lucasantonete@gmail.com", email = "lucasantonete@gmail.com"},
]
dependencies = [
    "django>=4.2.13",
    "djangorestframework>=3.15.2",
    "setuptools>=70.1.1",
    "drf-spectacular>=0.27.2",
    "passage-identity>=2.5.0",
    "openapi-client>=1.1.7",
    "django-cors-headers>=4.4.0",
    "google-api-python-client>=2.135.0",
    "openapi-python-client>=0.21.1",
    "dotenv>=0.0.5",
    "python-dotenv>=1.0.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "python manage.py runserver localhost:8000"
runserver = "python manage.py runserver"
createsuperuser = "python manage.py createsuperuser"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
